--- a/Compass Challenger/src/App.css
+++ b/Compass Challenger/src/App.css
@@ -1,4 +1,22 @@
-#root {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +57,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
