Component: profile card

--- a/Compass Challenger/src/components/card.css
+++ b/Compass Challenger/src/components/card.css
@@ -1,6 +1,6 @@
 .card-outer {
     background: #FDFEFF;;
-    height: 435px;
+    /* height: 435px; */
     width: 297px;
     display: flex;
     border-radius: 16px;
