--- a/Compass Challenger/src/components/communities-card.css
+++ b/Compass Challenger/src/components/communities-card.css
@@ -36,6 +36,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    padding: 30px 0px
 }
 
 .communities-thumb-container {
