--- a/Compass Challenger/src/components/navbar.css
+++ b/Compass Challenger/src/components/navbar.css
@@ -15,6 +15,9 @@
 
 .img-nav {
   padding: 20px;
+  width: 107px;
+  height: 32px;
+  flex-shrink: 0;
 }
 
 .nav-group {
@@ -31,13 +34,32 @@
   color: #ED2590;
 }
 
-.search-bar {
-  margin-left: 20px;
-  width: 355px;
-  height: 43.959px;
-  flex-shrink: 0;
+.search-bar-wrapper {
+  display: flex;
+  align-items: center;
+  background-color: #EFF3F8;
   border-radius: 8px;
-  background: #EFF3F8;
+  padding: 8px;
+}
+
+.search-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+}
+
+.search-bar {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.search-bar:focus {
+  background-color: #EFF3F8;
+  color: #000;
 }
 
 .user-profile {
