--- a/Compass Challenger/src/components/Main.module.css
+++ b/Compass Challenger/src/components/Main.module.css
@@ -1,35 +1,54 @@
 .main {
     display: flex;
-    background: #D9E6F7;;
+    background: #D9E6F7;
     max-width: 100%;
-    height: 1080px;
+    height: 1040px;
 }
 
 .main img {
     width: 800px;
     height: 598px;
     flex-shrink: 0; 
-    margin-top: 241px;
-    margin-left: 450px;
+    margin-top: 150px;
+    margin-left: 430px; 
+    z-index: 1;
+}
+
+.bg_image {
+    position: absolute;
+    z-index: 1;
+}
+
+.main p {
+    position: absolute;
+    color: #FFF;
+    font-family: SF Pro Display;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    z-index: 1;
+    margin-top: 640px;
+    margin-left: 470px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 384px;
-    height: 700px;
+    width: 430px;
+    height: 770px;
     flex-shrink: 0;
     border-radius: 16px;
     background: #FDFEFF;
-    margin-top: 241px;
+    margin-top: 150px;
     margin-left: 50px;
     gap: 8px;
 }
 
 .form img {
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
     flex-shrink: 0;
     margin: 0;
     padding-top: 40px;
@@ -38,15 +57,15 @@
 .form h2 {
     color: #ED2590;
     font-family: SF Pro Display;
-    font-size: 24px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
  .form input{
-    width: 336px;
+    width: 370px;
     height: 51px;
     flex-shrink: 0;
     border-radius: 8px;
@@ -54,33 +73,35 @@
     background: #EFF3F8;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 16px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    cursor: text;
  }
 
- .nameInput {
-    margin-top: 30px;
- }
- 
- .form input::placeholder {
-    padding: 15px;
- }
-
- .form button {
-    width: 336px;
+ .form .submitButton {
+    width: 370px;
     height: 51px;
     flex-shrink: 0;
     border-radius: 8px;
     background: #ED2590;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 18px;
+    font-size: 23px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 15px;
+    margin-top: 22px;
+    border: none;
+ }
+
+ .nameInput {
+    margin-top: 60px;
+ }
+ 
+ .form input::placeholder {
+    padding: 15px;
  }
 
  /* .form input[type="date"] {
