--- a/Compass Challenger/src/components/navbar.css
+++ b/Compass Challenger/src/components/navbar.css
@@ -1,34 +1,41 @@
 .navbar {
-  display: grid;
-  grid-template-columns: 2fr 500px 2fr;
-  background: #fdfeff;
-  width: auto;
+  width: 100%;
   height: 92px;
-  flex-shrink: 0;
-  color: #4b4b4b;
+  display: flex;
+  justify-content: center;
   font-family: SF Pro Display;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  background: #fdfeff;
+}
+
+.navbar-content {
+  display: flex;
+  height: 100%;
+  width: 75vw;
 }
 
 .nav-group-left {
-  grid-column: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.nav-group-right {
-  grid-column: 3;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  width: 50%;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.nav-group-right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 50%;
+  flex-direction: row;
+  gap: 20px;
 }
 
 .img-nav {
-  padding: 20px;
   width: 107px;
   height: 32px;
   flex-shrink: 0;
@@ -84,10 +91,17 @@
   align-items: center;
   margin-left: 10px;
   padding: 20px;
+  gap: 2px;
+}
+
+.user-profile img {
+  width: 40px;
+  height: 40px;
 }
 
 .user-name {
   margin-left: 5px;
+  white-space: nowrap;
 }
 
 .arrow-down {
