--- a/Compass Challenger/src/components/userInfo.css
+++ b/Compass Challenger/src/components/userInfo.css
@@ -7,13 +7,14 @@
   align-items: center;
   gap: 10px;
   margin-right: 16px;
+  font-size: var(--font-smallest);
 }
 
 .ver-todos {
   color: #ed2590;
   color: #ed2590;
   font-family: SF Pro Display;
-  font-size: 14px;
+  font-size: var(--font-smallest);
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
