--- a/Compass Challenger/src/App.css
+++ b/Compass Challenger/src/App.css
@@ -4,26 +4,24 @@
   box-sizing: border-box;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
-  column-gap: 1px;
-  row-gap: 1px;
+.body-container {
+  display: flex;
+  width: 100%;
+  padding-top: 80px;
+  justify-content: center;
 }
 
-.spacer {
-  height: 80px;
+.body-content {
+  display: flex;
+  flex-direction: row;
+  width: 85vw;
+  max-width: 1280px;
+  justify-content: space-between;
 }
 
-.spaced-component {
-  margin-top: 32px; 
+.profile-section {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  gap: 25px;
 }
-
-.user-profile-section {
-  padding: 0 20px;
-  margin: 0 20px;
-}
-  
-  
-  
-  
