--- a/Compass Challenger/src/components/edit-profile-button.css
+++ b/Compass Challenger/src/components/edit-profile-button.css
@@ -1,7 +1,7 @@
 .edit-profile-button {
     color: #ED2590;
     font-family: SF Pro Display;
-    font-size: 18px;
+    font-size: var(--font-medium);
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
