--- a/Compass Challenger/src/components/navbar.css
+++ b/Compass Challenger/src/components/navbar.css
@@ -1,10 +1,9 @@
 .navbar {
   width: 100%;
-  height: 92px;
+  height: 78px;
   display: flex;
   justify-content: center;
   font-family: SF Pro Display;
-  font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
@@ -14,7 +13,8 @@
 .navbar-content {
   display: flex;
   height: 100%;
-  width: 75vw;
+  width: 85vw;
+  max-width: 1280px;
 }
 
 .nav-group-left {
@@ -49,6 +49,7 @@
 .nav-link {
   margin-right: 10px;
   padding: 0;
+  font-size: var(--font-medium);
 }
 
 .profile-link {
@@ -77,7 +78,7 @@
   background-color: transparent;
   outline: none;
   font-family: inherit;
-  font-size: 18px;
+  font-size: var(--font-small);
   line-height: 24px;
 }
 
@@ -102,6 +103,7 @@
 .user-name {
   margin-left: 5px;
   white-space: nowrap;
+  font-size: var(--font-small);;
 }
 
 .arrow-down {
