--- a/Compass Challenger/src/components/userTags.css
+++ b/Compass Challenger/src/components/userTags.css
@@ -16,7 +16,7 @@ ul {
 li {
   color: #4B4B4B;
   font-family: SF Pro Display;
-  font-size: 14px;
+  font-size: var(--font-small);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
