--- a/Compass Challenger/src/components/userProfile.css
+++ b/Compass Challenger/src/components/userProfile.css
@@ -1,10 +1,10 @@
 .user-profile-container {
   display: flex;
-  justify-content: space-around;
+  width: 100%;
 }
 
 .user-profile-box {
-  width: 592px;
+  width: 100%;
   height: 854px;
   flex-shrink: 0;
   background-color: #FDFEFF;
