--- a/Compass Challenger/src/App.css
+++ b/Compass Challenger/src/App.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   width: 85vw;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   justify-content: space-between;
 }
 
