--- a/Compass Challenger/src/components/profile-card.css
+++ b/Compass Challenger/src/components/profile-card.css
@@ -3,8 +3,8 @@
     border: 3px solid #ED2590;
     padding: 3px;
     object-fit: cover;
-    height: 25%;
-    width: 80%;
+    height: 12rem;
+    width: 12rem;
     align-self: center;
     aspect-ratio: 1 / 1;
 }
