--- a/Compass Challenger/src/components/userProfile.css
+++ b/Compass Challenger/src/components/userProfile.css
@@ -5,7 +5,7 @@
 
 .user-profile-box {
   width: 100%;
-  height: 854px;
+  /* height: 854px; */
   flex-shrink: 0;
   background-color: #FDFEFF;
   border-radius: 16px;
