--- a/Compass Challenger/src/components/MainRegister/Main.module.css
+++ b/Compass Challenger/src/components/MainRegister/Main.module.css
@@ -47,7 +47,7 @@
     background: #FDFEFF;
     margin-top: 150px;
     margin-left: 50px;
-    gap: 8px;
+    gap: 15px;
 }
 
 .form1 img {
@@ -65,7 +65,6 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 15px;
 }
 
  .form1 input{
@@ -82,10 +81,19 @@
     font-weight: 400;
     line-height: normal;
     cursor: text;
+    padding-left: 20px;
+ }
+
+ .form1 .form1_birthdate input::-webkit-calendar-picker-indicator{
+    padding: 20px;
+ }
+
+ .form1 .form1_birthdate input::-webkit-calendar-picker-indicator:hover{
+    cursor: pointer;
  }
 
  .form1 input[type='submit'] {
-    width: 370px;
+    width: 390px;
     height: 51px;
     flex-shrink: 0;
     border-radius: 8px;
@@ -111,15 +119,15 @@
     margin-top: 45px;
  }
  
- .form1 input::placeholder {
+ /* .form1 input::placeholder {
     padding: 15px;
- }
+ } */
 
  /* Style of form2 */
 
  .form2 {
-    width: 600px;
-    height: 850px;
+    width: 550px;
+    height: 870px;
     flex-shrink: 0;
     border-radius: 16px;
     background: #FDFEFF;
@@ -134,12 +142,11 @@
 }
 
 .form2 img {
-    
     width: 40px;
     height: 40px;
     flex-shrink: 0;
     margin: 0;
-    padding-top: 40px;
+    margin-top: 25px;
 }
 
 .form2 h2 {
@@ -163,31 +170,63 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 20px;
 }
 
 .form2_profile_picture img {
     width: 70px;
     height: 70px;
+    margin-bottom: 20px;
+    padding: 0;
+    margin-top: 15px;
+}
+
+.form2 input[type='file']{
+    font-size: 16px;
 }
 
 .form2_container {
     display: flex;
     flex-direction: column;
+    justify-content: right;
+    align-items: flex-end;
     color: #868686;
     font-family: SF Pro Display;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
 .form2_container div {
-    margin-top: 20px;
+    margin-top: 25px;
     margin-left: 30px;
 }
 
-.form2 input[type='submit'] {
+.form2 input[type='text'] {
+    width: 200px;
+    height: 23px;
+    margin-right: 70px;
+}
+
+.form2 div select {
+    text-align: center;
+    width: 140px;
+    height: 25px;
+    margin-right: 132px;
+}
+
+.form2 div select {
+    font-size: 18px;
+}
+
+.form2_submit {
+    display: flex;
+    justify-content: center;
+}
+
+.form2_submit input{
     width: 370px;
     height: 51px;
     flex-shrink: 0;
@@ -199,12 +238,12 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 22px;
+    margin-top: 35px;
     border: none;
     cursor: pointer;
  }
 
-.form2 input[type='submit']:hover {
+ .form2_submit input:hover {
     border: 2px solid #ED2590;
     background-color: #FFF;
     color: #ED2590;
