--- a/Compass Challenger/src/Components/Login/MainLogin/index.module.css
+++ b/Compass Challenger/src/Components/Login/MainLogin/index.module.css
@@ -6,17 +6,17 @@
 .main {
     display: flex;
     background: #D9E6F7;
-    max-width: 100%;
-    height: 1040px;
+    min-width: 100%;
+    height: 75rem;
     font-family: SF Pro Display, sans-serif;
 }
 
 .main img {
-    width: 54.5em;
-    height: 38.5em;
+    width: 55em;
+    height: 45.5em;
     flex-shrink: 0;
     margin-top: 150px;
-    margin-left: 430px;
+    margin-left: 19em;
     z-index: 1;
 }
 
@@ -29,27 +29,27 @@
     position: absolute;
     color: #FFF;
     font-family: SF Pro Display, sans-serif;
-    font-size: 32px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     z-index: 1;
-    margin-top: 640px;
-    margin-left: 470px;
+    margin-top: 18em;
+    margin-left: 8.5em;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 26em;
-    height: 38.5em;
+    width: 28em;
+    height: 41.2em;
     flex-shrink: 0;
     border-radius: 16px;
     background: #FDFEFF;
-    margin-top: 150px;
-    margin-left: 50px;
-    gap: 8px;
+    margin-top: 182px;
+    margin-left: 49px;
+    gap: 10px;
 }
 
 .form img {
@@ -71,14 +71,14 @@
 }
 
 .form input {
-    width: 370px;
-    height: 51px;
+    width: 19em;
+    height: 3em;
     flex-shrink: 0;
     border-radius: 8px;
     border: none;
     background: #EFF3F8;
     color: #868686;
-    font-family: SF Pro Display sans-serif;
+    font-family: SF Pro Display, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -107,27 +107,29 @@
 
 .form .inputCheckbox {
     background: #eff3f8;
-    border-radius: 6px;
+    
+    cursor: pointer;
+    border-radius: 20%;
     border-style: solid;
     border-color: #dcdcdc;
     border-width: 1px;
     width: 20px;
     height: 20px;
     margin-top: 4px;
-    
-    
-    
+
 }
 
-.form .button {
-    width: 370px;
-    height: 51px;
+
+
+.form .buttonFirstChild {
+    width: 19em;
+    height: 3em;
     flex-shrink: 0;
     border-radius: 8px;
     background: #ED2590;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 23px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -135,8 +137,27 @@
     border: none;
 }
 
-.nameInput {
-    margin-top: 60px;
+.form .buttonSecondChild {
+    width: 19em;
+    height: 3em;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #EFF3F8;
+    color: #ED2590;
+    font-family: SF Pro Display;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-top: 22px;
+    border: none;
+}
+
+.form .passwordForgot {
+    margin-top: 10px;
+    font-size: 15px;
+    color: #ED2590;
+    text-decoration: underline;
 }
 
 .form input::placeholder {
