--- a/Compass Challenger/src/components/HeaderRegister/Header.module.css
+++ b/Compass Challenger/src/components/HeaderRegister/Header.module.css
@@ -1,15 +1,15 @@
 .nav {
     display: flex;
-    max-width: 100%;
-    height: 92px;
-    flex-shrink: 0;
     align-items: center;
+    max-width: 100%;
+    height: 5.75rem;
+    flex-shrink: 0;
 }
 
 .nav img {
-    width: 107px;
-    height: 32px;
-    padding-left: 435px;
+    width: 6.688rem;
+    height: 2rem;
+    margin-left: 22rem;
 }
 
 .nav ul{
@@ -18,10 +18,33 @@
     list-style-type: none;
     color: #4B4B4B;
     font-family: SF Pro Display;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px;
-    margin-left: 820px;
-    gap: 50px;
+    line-height: 1.5rem;
+    margin-left: 51.25rem;
+    gap: 3.125rem;
+}
+
+@media(max-width: 450px){
+
+    .nav {
+        position: fixed;
+        background-color: white;
+        width: 100%;
+        display: flex; 
+        justify-content: center; 
+        align-items: center;
+    }
+
+    .nav img {
+        width: 5rem;
+        height: 1.495rem;
+        padding: 0;
+        margin-left: 0;
+    }
+
+    .nav ul {
+        display: none;
+    }
 }
