--- a/Compass Challenger/src/components/MainRegister/Main.module.css
+++ b/Compass Challenger/src/components/MainRegister/Main.module.css
@@ -3,21 +3,26 @@
 .main {
     display: flex;
     background: #D9E6F7;
-    max-width: 100%;
-    height: 1040px;
+    width: 120rem;
+    height: 100%;
+
 }
 
-.main img {
-    width: 800px;
-    height: 598px;
+.login_banner {
+    width: 50rem;
+    height: 37.375rem;
     flex-shrink: 0; 
-    margin-top: 150px;
-    margin-left: 430px; 
-    z-index: 1;
+    margin-top: 9.375rem;
+    margin-left: 22rem; 
 }
 
 .bg_image {
     position: absolute;
+    width: 50rem;
+    height: 37.375rem;
+    flex-shrink: 0; 
+    margin-top: 9.375rem;
+    margin-left: 22rem;  
     z-index: 1;
 }
 
@@ -25,13 +30,13 @@
     position: absolute;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 32px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     z-index: 1;
-    margin-top: 640px;
-    margin-left: 470px;
+    margin-top: 40rem;
+    margin-left: 24rem;
 }
 
 /* Style of form1 */
@@ -40,99 +45,95 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 430px;
-    height: 770px;
+    width: 26.875rem;
+    height: 46.25rem;
     flex-shrink: 0;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #FDFEFF;
-    margin-top: 150px;
-    margin-left: 50px;
-    gap: 15px;
+    margin-top: 6rem;
+    margin-left: 3.125rem;
+    margin-bottom: 5.5rem;
+    gap: 1rem;
 }
 
 .form1 img {
-    width: 40px;
-    height: 40px;
+    width: 2rem;
+    height: 2rem;
     flex-shrink: 0;
     margin: 0;
-    padding-top: 40px;
+    padding-top: 2.5rem;
 }
 
 .form1 h2 {
     color: #ED2590;
     font-family: SF Pro Display;
-    font-size: 30px;
+    font-size: 1.75rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    margin-bottom: 1.25rem;
 }
 
  .form1 input{
-    width: 370px;
-    height: 51px;
+    width: 22rem;
+    height: 3.188rem;
     flex-shrink: 0;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     border-color: transparent;
     background: #EFF3F8;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     cursor: text;
-    padding-left: 20px;
+    padding-left: 1.25rem;
  }
 
- .form1 .form1_birthdate input::-webkit-calendar-picker-indicator{
-    padding: 20px;
+ .form1 input::-webkit-calendar-picker-indicator{
+    padding: 1.875rem;
  }
 
- .form1 .form1_birthdate input::-webkit-calendar-picker-indicator:hover{
+ .form1 input::-webkit-calendar-picker-indicator:hover{
     cursor: pointer;
  }
 
  .form1 input[type='submit'] {
-    width: 390px;
-    height: 51px;
+    width: 23rem;
+    height: 3.188rem;
     flex-shrink: 0;
-    border-radius: 8px;
+    border-radius: 0.5rem solid;
     background: #ED2590;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 23px;
+    font-size: 1.4rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 22px;
+    margin-top: 0.625rem;
     border: none;
     cursor: pointer;
  }
 
  .form1 input[type='submit']:hover {
-    border: 2px solid #ED2590;
+    border: 0.125rem solid #ED2590;
     background-color: #FFF;
     color: #ED2590;
 }
 
- .nameInput {
-    margin-top: 45px;
- }
- 
- /* .form1 input::placeholder {
-    padding: 15px;
- } */
-
  /* Style of form2 */
 
  .form2 {
-    width: 550px;
-    height: 870px;
+    width: 32.5rem;
+    height: 52.5rem;
     flex-shrink: 0;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #FDFEFF;
-    margin-top: 150px;
-    margin-left: 50px;
+    margin-top: 3.125rem;
+    margin-left: 3.125rem;
+    margin-bottom: 2rem;
+
 }
 
 .form_header {
@@ -142,22 +143,22 @@
 }
 
 .form2 img {
-    width: 40px;
-    height: 40px;
+    width: 2.125rem;
+    height: 2.125rem;
     flex-shrink: 0;
     margin: 0;
-    margin-top: 25px;
+    margin-top: 1.563rem;
 }
 
 .form2 h2 {
     text-align: center;
     color: #ED2590;
     font-family: SF Pro Display;
-    font-size: 30px;
+    font-size: 1.75rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 15px;
+    margin-top: 0.938rem;
 }
 
 .form2_profile_picture {
@@ -166,23 +167,24 @@
     align-items: center;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 .form2_profile_picture img {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 20px;
+    width: 3.125rem;
+    height: 3.125rem;
+    margin-bottom: 0.938rem;
     padding: 0;
-    margin-top: 15px;
+    margin-top: 0.938rem;
 }
 
 .form2 input[type='file']{
-    font-size: 16px;
+    font-size: 0.875rem;
+    margin-bottom: 0.625rem;
 }
 
 .form2_container {
@@ -192,33 +194,46 @@
     align-items: flex-end;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 20px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 10px;
+    margin-top: 0.625rem;
 }
 
 .form2_container div {
-    margin-top: 25px;
-    margin-left: 30px;
+    margin-top: 1.563rem;
+    margin-left: 1.875rem;
 }
 
 .form2 input[type='text'] {
-    width: 200px;
-    height: 23px;
-    margin-right: 70px;
+    width: 12.5rem;
+    height: 1.563rem;
+    color: #868686;
+    font-family: SF Pro Display;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right: 4.375rem;
+    padding-left: 0.5rem;
 }
 
 .form2 div select {
     text-align: center;
-    width: 140px;
-    height: 25px;
-    margin-right: 132px;
+    width: 8.75rem;
+    height: 1.563rem;
+    margin-right: 8.813rem;
+    color: #868686;
+    font-family: SF Pro Display;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .form2 div select {
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .form2_submit {
@@ -227,24 +242,247 @@
 }
 
 .form2_submit input{
-    width: 370px;
-    height: 51px;
+    width: 22rem;
+    height: 3.188rem;
     flex-shrink: 0;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     background: #ED2590;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 23px;
+    font-size: 1.375rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 35px;
+    margin-top: 1.875rem;
     border: none;
     cursor: pointer;
  }
 
  .form2_submit input:hover {
-    border: 2px solid #ED2590;
+    border: 0.125rem solid #ED2590;
     background-color: #FFF;
     color: #ED2590;
 }
+
+@media(max-width: 450px){
+
+    .login_banner, .bg_image, .main p {
+        display: none;
+    }
+
+    .main {
+        max-width: 100%;
+    }
+
+    .form1 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 7.5rem;
+    }
+
+    .form1 img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .form1 h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1.875rem;
+    }
+
+    .form1 input {
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
+        width: 80%;
+        height: 3rem;
+    }
+    
+    
+    .form1 input[type='submit'] {
+        display: flex;
+        width: 90%;
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-bottom: 1.25rem;     
+    }
+
+    .form2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 85%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 7.5rem;
+    }
+
+    .form2 input[type='file']{
+        font-size: 0.875rem;
+        margin-bottom: 0.625rem;
+    }
+    
+    .form2_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: right;
+        align-items: flex-end;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1.125rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-top: 0.625rem;
+    }
+    
+    .form2_container div {
+        margin-top: 1rem;
+    }
+    
+    .form2 input[type='text'] {
+        width: 15rem;
+        height: 1.563rem;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1.1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-right: 4.375rem;
+        padding-left: 0.5rem;
+    }
+    
+    .form2 div select {
+        text-align: center;
+        width: 8rem;
+        height: 1.563rem;
+        margin-right: 8.813rem;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    
+    .form2_submit {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .form2_submit input{
+        width: 18rem;
+        height: 3rem;
+        flex-shrink: 0;
+        border-radius: 0.5rem;
+        background: #ED2590;
+        color: #FFF;
+        font-family: SF Pro Display;
+        font-size: 1.3rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        border: none;
+        cursor: pointer;
+        margin-bottom: 1rem;
+     }
+    
+}
+
+/* @media (max-width: 768px) {
+
+    .login_banner, .bg_image, .main p {
+        display: none;
+    }
+
+    .main {
+        width: auto;
+        height: auto;
+    }
+
+    .form1 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 5rem; 
+        margin-bottom: 2rem; 
+    }
+
+    .form1 img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .form1 h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1.875rem;
+    }
+
+    .form1 input {
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
+        width: 80%;
+        height: 3rem;
+    }
+
+    .form1 input[type='submit'] {
+        display: flex;
+        width: 90%;
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-bottom: 1.25rem;
+    }
+
+    .form2 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        border-radius: 1rem;
+        background: #FDFEFF;
+        margin-top: 3.125rem;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2rem; 
+    }
+
+    .form2 img {
+        width: 2.125rem;
+        height: 2.125rem;
+        flex-shrink: 0;
+        margin: 0;
+        margin-top: 1.563rem;
+    }
+
+    .form2 h2 {
+        text-align: center;
+        color: #ED2590;
+        font-family: SF Pro Display;
+        font-size: 1.5rem; 
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        margin-top: 0.938rem;
+    }
+
+    .form2_submit input {
+        width: 90%; 
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-top: 1.875rem;
+    }
+} */
