--- a/Compass Challenger/src/Components/Profile/headerProfileCss/navbar.css
+++ b/Compass Challenger/src/Components/Profile/headerProfileCss/navbar.css
@@ -116,7 +116,7 @@
   display: none;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 1279px) {
   .navbar-content {
     flex-direction: row; 
     justify-content: space-between;
