--- a/Compass Challenger/src/components/FooterRegister/Footer.module.css
+++ b/Compass Challenger/src/components/FooterRegister/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 100%;
+    width: 120rem;
     flex-shrink: 0;
     background: #FDFEFF;
     height: 10%;
@@ -27,6 +27,7 @@
         justify-content: center;
         bottom: 0;
         padding: 0.5rem;
+        width: 100%;
     }
 
     .footer p {
@@ -41,6 +42,7 @@
         padding: 1rem;
         flex-direction: column;
         text-align: center;
+        width: 100%;
     }
 
     .footer p {
