--- a/Compass Challenger/src/Components/Login/FooterLogin/index.module.css
+++ b/Compass Challenger/src/Components/Login/FooterLogin/index.module.css
@@ -17,3 +17,34 @@
     line-height: 24px;
     margin-top: 30px;
 }
+
+@media(max-width: 450px) {
+
+    .footer {
+        height: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        bottom: 100px;
+        padding: 0.5rem;
+        margin-top: 2rem;
+    }
+
+    .footer p {
+        text-align: center;
+        font-size: 0.85rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        height: 1rem;
+        padding: 1rem;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer p {
+        font-size: 1rem;
+    }
+}
