--- a/Compass Challenger/src/Components/Login/HeaderLogin/index.module.css
+++ b/Compass Challenger/src/Components/Login/HeaderLogin/index.module.css
@@ -1,16 +1,19 @@
 .nav {
+    background-color: #FFF;
     display: flex;
-    max-width: 100%;
+    width: 100%;
     height: 5em;
     flex-shrink: 0;
     align-items: center;
+    
+    
+    
 }
 
 .nav img {
-    width: 105px;
-    height: 30px;
-    padding-bottom: 10px;
-    padding-left: 435px;
+    width: 7rem;
+    height: 3rem;
+    margin-left: 20rem;
 }
 
 .nav ul{
@@ -23,6 +26,51 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    margin-left: 820px;
+    margin-top: 1rem;
+    margin-left: 60.7rem;
     gap: 50px;
+}
+
+@media(max-width: 450px){
+
+    .nav {
+        display: flex; 
+        justify-content: center; 
+        align-items: center;
+        position: fixed;
+        background-color: white;
+        width: 100%;
+    }
+
+    .nav img {
+        width: 5rem;
+        height: 1.495rem;
+        padding: 0;
+        margin-left: 0;
+    }
+
+    .nav ul {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .nav {
+        display: flex;
+        justify-content: center;
+        background-color: white;
+        position: fixed;
+        width: 100%;        
+    }
+
+    .nav img {
+        width: 5rem;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav ul {
+        display: none;
+    }
 }
