--- a/Compass Challenger/src/Components/Profile/footerProfileCss/editProfile.css
+++ b/Compass Challenger/src/Components/Profile/footerProfileCss/editProfile.css
@@ -21,11 +21,11 @@
   border: 1px solid #ed2590;
   padding: 10px 20px;
   font-size: 16px;
-  width: 80%;
+  width: 50rem;
 }
 
 .edit-profile-container select {
-  width: 82%;
+  width: 50rem;
 }
 
 .edit-profile-container button {
