--- a/Compass Challenger/src/Components/Register/FooterRegister/Footer.module.css
+++ b/Compass Challenger/src/Components/Register/FooterRegister/Footer.module.css
@@ -17,3 +17,34 @@
     line-height: 24px;
     margin-top: 15px;
 }
+
+@media(max-width: 450px) {
+
+    .footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        bottom: 0;
+        padding: 0.5rem;
+        width: 100%;
+    }
+
+    .footer p {
+        text-align: center;
+        font-size: 0.85rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        height: auto;
+        padding: 1rem;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .footer p {
+        font-size: 1rem;
+    }
+}
