--- a/Compass Challenger/src/Components/Register/MainRegister/Main.module.css
+++ b/Compass Challenger/src/Components/Register/MainRegister/Main.module.css
@@ -118,13 +118,15 @@
  /* Style of form2 */
 
  .form2 {
-    width: 600px;
-    height: 850px;
+    width: 32.5rem;
+    height: 52.5rem;
     flex-shrink: 0;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #FDFEFF;
-    margin-top: 150px;
-    margin-left: 50px;
+    margin-top: 3.125rem;
+    margin-left: 3.125rem;
+    margin-bottom: 2rem;
+
 }
 
 .form_header {
@@ -134,23 +136,22 @@
 }
 
 .form2 img {
-    
-    width: 40px;
-    height: 40px;
+    width: 2.125rem;
+    height: 2.125rem;
     flex-shrink: 0;
     margin: 0;
-    padding-top: 40px;
+    margin-top: 1.563rem;
 }
 
 .form2 h2 {
     text-align: center;
     color: #ED2590;
     font-family: SF Pro Display;
-    font-size: 30px;
+    font-size: 1.75rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 15px;
+    margin-top: 0.938rem;
 }
 
 .form2_profile_picture {
@@ -159,53 +160,323 @@
     align-items: center;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 1.25rem;
 }
 
 .form2_profile_picture img {
-    width: 70px;
-    height: 70px;
+    width: 3.125rem;
+    height: 3.125rem;
+    margin-bottom: 0.938rem;
+    padding: 0;
+    margin-top: 0.938rem;
+}
+
+.form2 input[type='file']{
+    font-size: 0.875rem;
+    margin-bottom: 0.625rem;
 }
 
 .form2_container {
     display: flex;
     flex-direction: column;
+    justify-content: right;
+    align-items: flex-end;
     color: #868686;
     font-family: SF Pro Display;
-    font-size: 20px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 100px;
+    margin-top: 0.625rem;
 }
 
 .form2_container div {
-    margin-top: 20px;
-    margin-left: 30px;
+    margin-top: 1.563rem;
+    margin-left: 1.875rem;
 }
 
-.form2 input[type='submit'] {
-    width: 370px;
-    height: 51px;
+.form2 input[type='text'] {
+    width: 12.5rem;
+    height: 1.563rem;
+    color: #868686;
+    font-family: SF Pro Display;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right: 4.375rem;
+    padding-left: 0.5rem;
+}
+
+.form2 div select {
+    text-align: center;
+    width: 8.75rem;
+    height: 1.563rem;
+    margin-right: 8.813rem;
+    color: #868686;
+    font-family: SF Pro Display;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.form2 div select {
+    font-size: 1.125rem;
+}
+
+.form2_submit {
+    display: flex;
+    justify-content: center;
+}
+
+.form2_submit input{
+    width: 22rem;
+    height: 3.188rem;
     flex-shrink: 0;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     background: #ED2590;
     color: #FFF;
     font-family: SF Pro Display;
-    font-size: 23px;
+    font-size: 1.375rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 22px;
+    margin-top: 1.875rem;
     border: none;
     cursor: pointer;
  }
 
-.form2 input[type='submit']:hover {
-    border: 2px solid #ED2590;
+ .form2_submit input:hover {
+    border: 0.125rem solid #ED2590;
     background-color: #FFF;
     color: #ED2590;
 }
+
+@media(max-width: 450px){
+
+    .login_banner, .bg_image, .main p {
+        display: none;
+    }
+
+    .main {
+        max-width: 100%;
+    }
+
+    .form1 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 7.5rem;
+    }
+
+    .form1 img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .form1 h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1.875rem;
+    }
+
+    .form1 input {
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
+        width: 80%;
+        height: 3rem;
+    }
+    
+    
+    .form1 input[type='submit'] {
+        display: flex;
+        width: 90%;
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-bottom: 1.25rem;     
+    }
+
+    .form2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 85%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 7.5rem;
+    }
+
+    .form2 input[type='file']{
+        font-size: 0.875rem;
+        margin-bottom: 0.625rem;
+    }
+    
+    .form2_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: right;
+        align-items: flex-end;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1.125rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-top: 0.625rem;
+    }
+    
+    .form2_container div {
+        margin-top: 1rem;
+    }
+    
+    .form2 input[type='text'] {
+        width: 15rem;
+        height: 1.563rem;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1.1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-right: 4.375rem;
+        padding-left: 0.5rem;
+    }
+    
+    .form2 div select {
+        text-align: center;
+        width: 8rem;
+        height: 1.563rem;
+        margin-right: 8.813rem;
+        color: #868686;
+        font-family: SF Pro Display;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    
+    .form2_submit {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .form2_submit input{
+        width: 18rem;
+        height: 3rem;
+        flex-shrink: 0;
+        border-radius: 0.5rem;
+        background: #ED2590;
+        color: #FFF;
+        font-family: SF Pro Display;
+        font-size: 1.3rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        border: none;
+        cursor: pointer;
+        margin-bottom: 1rem;
+     }
+    
+}
+
+@media (max-width: 768px) {
+
+    .login_banner, .bg_image, .main p {
+        display: none;
+    }
+
+    .main {
+        width: auto;
+        height: auto;
+    }
+
+    .form1 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10rem; 
+        margin-bottom: 2rem; 
+    }
+
+    .form1 img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .form1 h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1.875rem;
+    }
+
+    .form1 input {
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
+        width: 80%;
+        height: 3rem;
+    }
+
+    .form1 input[type='submit'] {
+        display: flex;
+        width: 90%;
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-bottom: 1.25rem;
+    }
+
+    .form2 {
+        width: 80%;
+        height: max-content;
+        flex-shrink: 0;
+        border-radius: 1rem;
+        background: #FDFEFF;
+        margin-top: 10rem;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2rem; 
+    }
+
+    .form2 img {
+        width: 2.125rem;
+        height: 2.125rem;
+        flex-shrink: 0;
+        margin: 0;
+        margin-top: 1.563rem;
+    }
+
+    .form2 h2 {
+        text-align: center;
+        color: #ED2590;
+        font-family: SF Pro Display;
+        font-size: 1.5rem; 
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        margin-top: 0.938rem;
+    }
+
+
+    .form2_submit input {
+        width: 90%; 
+        font-size: 1.2rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+        margin-bottom: 1.5rem;
+    }
+} 
